@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-13T08:14:27Z",
+  "timestamp" : "2022-06-13T16:21:01Z",
   "count_outdated" : 330,
   "uniques_outdated" : 176,
-  "count" : 358,
+  "count" : 359,
   "uniques" : 194,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
