@@ -1,3 +1,10 @@
+2022-06-13T16:21:01Z:
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 176 330 / 194 358
+* notice: next accum: outdated-unq outdated-all / unq all: 176 330 / 194 359
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-13]
+
 2022-06-13T08:14:27Z:
 * notice: last 14d: unq all: 4 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 176 330 / 193 358
